fixed video height cutoff issue

--- a/src/styles/components/resource.scss
+++ b/src/styles/components/resource.scss
@@ -35,7 +35,8 @@
   &__content {
     background-color: colors(offwhite);
     z-index: 1;
-    padding: $standard-padding $standard-padding 50px;
+    padding: $standard-padding;
+    margin-bottom: 15vh;
 
     .ReactPDF {
       &__Document {
